height: 0, overflow: hidden on #svg-holder; now excess scrolling issues in #wrapper are corrected without have the wrapper have an absolute position. But the lagging issues still persists. Will still need to fix this. Plus, Probably going to go back to the clip path animations since the 'svg fix' is not actually supported in modern browsers

--- a/css/style.css
+++ b/css/style.css
@@ -4,26 +4,24 @@
 
 * {box-sizing: border-box; margin: 0; z-index: 3;}
 
-html {
-	overflow-x: hidden;
-	height: 100%;
-	min-height: 100vh;
-}
-
-body {
-	height: 100%;
+html, body {
 	width: 100%;
+	overflow-x: hidden;
 }
 
 #wrapper {
-	left: 0;
 	width: 100%;
+	height: 100%;
+	min-height: 100vh;
 	display: flex;
 	flex-flow: column nowrap;
-	align-items: center;
 	justify-content: space-between;
 	transition: padding-right .3s linear;
 	padding-right: 14em; /*CHANGE TO 0 WHEN SWITCHING MEDIA QUERIES*/
+}
+
+#svg-holder{
+	height: 0em;
 	overflow: hidden;
 }
 
